<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">

    <ImageView
        android:id="@+id/iv_detail_thumbnail"
        android:layout_width="173dp"
        android:layout_height="264dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="18dp"
        app:srcCompat="@drawable/placeholder"
        android:scaleType="centerCrop"
        android:background="@drawable/custom_image_background"
        android:cropToPadding="true"
        />
    <TextView
        android:id="@+id/tv_detail_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="placeholder"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/iv_detail_thumbnail"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/tv_detail_material"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/iv_detail_thumbnail"
        android:layout_below="@id/tv_detail_author"
        android:text="@string/detail_material"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/tv_detail_material_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/tv_detail_material"
        android:layout_below="@id/tv_detail_author"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/tv_detail_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_address"
        android:layout_below="@id/tv_detail_material_var"
        android:layout_toRightOf="@id/iv_detail_thumbnail"
        android:layout_marginLeft="5dp"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/tv_detail_address_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_below="@id/tv_detail_material_var"
        android:layout_toRightOf="@id/tv_detail_address"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/tv_detail_photographer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_photographer"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/iv_detail_thumbnail"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/tv_detail_photographer_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/iv_detail_thumbnail"
        android:layout_toRightOf="@id/tv_detail_photographer"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_below="@id/tv_detail_photographer"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:paddingBottom="10dp"
        />

</RelativeLayout>
</ScrollView>